# xlcloak

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  xlcloak.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-sanitize/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-restore-diff/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-VERIFICATION.md
.planning/phases/04-power-features/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/quick/260404-ixo-update-readme-md-to-reflect-phases-1-3-c/: 260404-ixo-PLAN.md  260404-ixo-SUMMARY.md
.planning/quick/260404-uuo-fix-restorer-substring-replacement-and-n/: 260404-uuo-PLAN.md  260404-uuo-SUMMARY.md
.planning/quick/260405-prx-fix-all-code-review-findings-across-10-i/: 260405-prx-PLAN.md  260405-prx-SUMMARY.md
.planning/quick/260405-sbx-fix-high-security-bypasses/: 260405-sbx-PLAN.md  260405-sbx-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/xlcloak/: __init__.py  bundle.py  cli.py  detector.py  excel_io.py  manifest.py  models.py  recognizers.py  restorer.py  sanitizer.py  token_engine.py
tests/: conftest.py  test_bundle.py  test_cli.py  test_cli_forced_columns.py  test_detector.py  test_e2e.py  test_excel_io.py  test_fixtures.py  test_forced_columns.py  test_manifest.py  test_models.py  test_restorer.py  test_sanitizer.py  test_token_engine.py
tests/fixtures/: generate_fixtures.py  hard.xlsx  medium.xlsx  simple.xlsx
