[project]
name = "xlcloak"
version = "0.1.0"
description = "Reversible Excel text sanitization CLI for AI workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["excel", "pii", "sanitization", "anonymization", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "openpyxl>=3.1.2",
    "click>=8.1.7",
    "cryptography>=42.0.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "pyyaml>=6.0.1",
    "rich>=12.0.0",
]

[project.scripts]
xlcloak = "xlcloak.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xlcloak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
